<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/ttansaction"
            android:icon="@drawable/transaction"
            android:title="@string/transaction" />


        <item
            android:id="@+id/profile"
            android:icon="@drawable/user"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/support"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/history"
            android:icon="@drawable/orderhistory"
            android:title="@string/orderHistory" />
    </group>



</menu>
